# JB-Pirate-King

./: .gitattributes  .gitignore  README.md
ais_ids_pi/: CMakeLists.txt  local-build-package.sh
ais_ids_pi/data/: ensemble_config.json  model.onnx  model_dcdetect.onnx  model_sup_moderntcn.onnx  model_sup_moderntcn.onnx.data  model_tranad.onnx  scaler.json  scaler_dcdetect.json  scaler_tranad.json  threshold.txt  threshold_sup_moderntcn.txt  threshold_tranad.txt  threshold_weighted_ensemble.txt
ais_ids_pi/include/: aisParser.h  ais_ids.h  ais_ids_pi.h  ais_ml.h  tpControlDialogImpl.h
ais_ids_pi/po/: POTFILES.in  POTFILES.in.test
ais_ids_pi/src/: ais_ids.cpp  ais_ids_pi.cpp  ais_ml.cpp  tpControlDialogImpl.cpp  tpJSON.cpp
aivdm_gen/: README.md  aivdm_gen.py  decord.py  demo gen.py  guigenerater.py  guitest.py  ids_gen.py  ids_gen_v2.py  test.py
aivdm_gen/__pycache__/: aivdm_gen.cpython-311.pyc.1475802107696  aivdm_gen.cpython-311.pyc.2111713166768  aivdm_gen.cpython-311.pyc.2338190593840  aivdm_gen.cpython-311.pyc.2373779046832  aivdm_gen.cpython-313.pyc.2866112269088  ids_gen.cpython-313.pyc.1727821744928  ids_gen.cpython-313.pyc.2313965918944  ids_gen.cpython-313.pyc.2647982725856  ids_gen_v2.cpython-313.pyc.2236399672032
ml/: PIPELINE.md  build_grid_stats.py  eval_anomaly.py  eval_result.txt  preprocess.py  train.py  train_benchmark.py  train_supervised.py
s-c/: .gitignore  AIS-IDS-GUI.bat  Readme.md  ais_ids_gui.py  docker-compose.yml  start_ais_ids.py
s-c/server/: Dockerfile  ais_parser.py  alert_logger.py  feature.py  main.py  ml_detector.py  requirements.txt
s-c_test/: CMakeLists.txt  ais_ids_inspector.cpp  ais_ids_inspector.h  snort_ais_ids_demo.py  snort_ais_ids_plan.md
scripts/: install_hooks.ps1
